--- a/practice.html
+++ b/practice.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width"/>
     <link href="/script/practice.css" rel="stylesheet" />
     <link href="script/bootstrap.css" rel="stylesheet">
-    <style>
+    
+<style>
       .text-left, .text-start { text-align: left !important; }
       .text-right, .text-end { text-align: right !important; }
       .text-center { text-align: center !important; }
@@ -54,14 +55,6 @@
       <div class="col-3"></div>
   </div>
     <footer>Done by: Chua Yun Jie -CT04</footer>
-</body>
-</html>
-
-
-
-
-
-
 <div class="border border-dark ml-5">
   <p>Good Morning! Hope you have a nice day!</p>
 </div>
@@ -70,3 +63,35 @@
    <div class='col-6 border border-dark'>This is a H1 Heading</div>
    <div class='col-6 border border-dark'>This is a H2 Heading</div>
 </div>
+   <script>
+      let helloWorld = "Hello World!";
+
+      console.log("helloWorld")
+      console.warn("helloWorld")
+      console.error("helloWorld")
+       </script>
+   </body>
+</html>
+
+let num1 = 6;
+let num2 = 8;
+let num3 = 10;
+console.log(num1*num2*num3);
+
+ num1 = 5;
+ num2 = 20;
+ num3 = 7;
+console.log(num1*num2*num3) /num4;
+
+    let numb = 4;
+    if(numb > 0){
+     console.log("Positive Number");
+    }
+    else if(numb < 0){
+      console.log("Negative Number");
+    }
+    else{
+      console.log("It is 0")
+    }
+    </script>
+  </body>
