--- a/practice.html
+++ b/practice.html
@@ -63,9 +63,36 @@
    <div class='col-6 border border-dark'>This is a H1 Heading</div>
    <div class='col-6 border border-dark'>This is a H2 Heading</div>
 </div>
-   <script>
-      let helloWorld = "Hello World!";
 
+
+
+
+
+
+
+
+
+     
+
+
+
+
+
+    
+   <script>
+     let validate = () => {
+       let num = document.getElementById("contact");
+       let errormsg = document.getElementById("contactErrorMsg");
+       if(num.vaule.length == 0{
+         num.classList = "form-control is-invalid";
+         let errormsg = document.getElementById("contactErrorMsg");
+     }
+       else{
+         num.class/List = "d-none text-danger";
+      let helloWorld = "Hello World!";
+         console.log("All good')
+      }
+     };
       console.log("helloWorld")
       console.warn("helloWorld")
       console.error("helloWorld")
