--- a/practice.html
+++ b/practice.html
@@ -64,7 +64,14 @@
    <div class='col-6 border border-dark'>This is a H2 Heading</div>
 </div>
 
-
+    <form>
+        <div class="row">
+          <div class="col">
+            <label name="fName">First Name</label>
+            <input type="text"> class="form-control" id="Fname" name="Fname"/>
+            <div>
+          <div>
+    </form>
 
 
 
